# benchmark-harnesses

./: README.md
.github/workflows/: pypi-publish-on-release.yml
simple-strands-agent/: README.md  pyproject.toml
simple-strands-agent/scripts/swe_pro/: run.sh
simple-strands-agent/scripts/swe_verified/: run.sh
simple-strands-agent/scripts/tb2/: run.sh  run_harbor.sh
simple-strands-agent/src/ssa/: agent.py
simple-strands-agent/src/ssa/configs/: default.yaml
simple-strands-agent/src/ssa/environments/: docker_utils.py
simple-strands-agent/tests/agent/: test_agent_retry.py
